Installation rules for unix systems.

--- a/liri-text.desktop
+++ b/liri-text.desktop
@@ -1,10 +1,9 @@
 [Desktop Entry]
 Name=Liri Text
 Comment=Material Design text editor
-Exec=/home/andrew/liri-text
+Exec=liri-text %U
 Terminal=false
 Type=Application
 Categories=Qt;Utility;TextEditor;
 Keywords=Text;Editor;
 Icon=accessories-text-editor
-#OnlyShowIn=Papyros
