Add icon, install icons on Unix systems
Resolves #24

--- a/data/io.liri.Text.desktop
+++ b/data/io.liri.Text.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Name=Liri Text
-Comment=Material Design text editor
+Comment=Edit text files
 Exec=liri-text %U
 Terminal=false
 Type=Application
 Categories=Qt;Utility;TextEditor;
 Keywords=Text;Editor;
-Icon=accessories-text-editor
+Icon=io.liri.Text
