--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,12 @@ script:
   - ./scripts/fetch_icons.sh
   - mkdir build
   - cd build
-  - qmake CONFIG+=use_qt_paths ..
+  - qmake CONFIG+=use_qt_paths ../fluid.pro
   - make -j4
   - sudo make install
   - cd ../../
   - mkdir build
   - cd build
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then qmake LIRI_INSTALL_PREFIX=/usr .. ; else qmake .. ; fi
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then qmake LIRI_INSTALL_PREFIX=/usr ../liri-text.pro ; else qmake ../liri-text.pro ; fi
   - make -j4
   - ../.travis/package.sh
