--- a/.travis.yml
+++ b/.travis.yml
@@ -44,15 +44,15 @@ before_deploy:
   - gittag=$(git describe --tags --abbrev=0)
   - today=$(date +"%Y-%m-%d")
   - gitrev=$(git log -1 --format="%h")
-  - gitdate=$(date -d @$(git log -1 --format="%at") +%Y-%m-%dT%H:%M:%S%z)
-  - cat .travis/bintray.json.in |
+  - gitdate=$(git log -1 --format="%aI")
+  - cat $TRAVIS_BUILD_DIR/.travis/bintray.json.in |
     sed -e "s,@BINTRAY_REPO@,$packagetype,g"
         -e "s,@PKGVER@,$gittag,g"
         -e "s,@GITTAG@,$gittag,g"
         -e "s,@TODAY@,$today,g"
         -e "s,@GITREV@,$gitrev,g"
         -e "s,@GITDATE@,$gitdate,g"
-        > .travis/bintray.json
+        > $TRAVIS_BUILD_DIR/.travis/bintray.json
 deploy:
   provider: bintray
   file: .travis/bintray.json
