--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -32,7 +32,7 @@ parts:
     prepare: |
       sed -i 's|Icon=.*|Icon=${SNAP}/usr/share/icons/hicolor/256x256/apps/io\.liri\.Text\.png|g' data/io.liri.Text.desktop
     qbs-options:
-      - products.qbs.installPrefix:usr
+      - modules.qbs.installPrefix:usr
       - products.liri-text.dataInstallDir:/snap/liri-text/current/usr/share/liri-text
     build-attributes: ["no-system-libraries"]
     stage-packages:
