Build with Docker on Linux
Use KDE Neon container to perform Linux builds.
This way we no longer have to worry about old libraries.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,12 @@ matrix:
       compiler: gcc
       sudo: require
       dist: trusty
+      services:
+        - docker
     - os: osx
 
-before_install:
-  - ./.travis/update.sh
-
-install:
-  - . ./.travis/install.sh
-
 script:
-  - ./.travis/build.sh && ./.travis/package.sh
+  - ./.travis/build.sh
 
 before_deploy:
   - git fetch --unshallow
