--- a/data/io.liri.Text.desktop.in
+++ b/data/io.liri.Text.desktop.in
@@ -2,6 +2,7 @@
 Name=Liri Text
 GenericName=Text Editor
 Comment=Edit text files
+#TRANSLATIONS
 Exec=liri-text %f
 Terminal=false
 Type=Application
