--- a/src/translations/io.liri.Text_zh_TW.desktop
+++ b/src/translations/io.liri.Text_zh_TW.desktop
@@ -14,6 +14,6 @@ Icon=io.liri.Text
 
 
 # Translations
-Comment[it]=Modifica file di testo
-Name[it]=Liri Text
-GenericName[it]=Editor di testo
+Comment[zh_TW]=編輯文字檔案
+Name[zh_TW]=Liri 文字編輯器
+GenericName[zh_TW]=文字編輯器
