Upload binaries to transfer.sh
We no longer publish a new release after a build because it breaks
other workflows.

Publish the `continuous` release triggers COPR rebuilds and tagging
a version will replace the release on GitHub, meaning that we have
to wait for the build before publishing a release and this slows
down the workflow.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ script:
 
 after_success:
   - ls -lh travis-out/*
-  - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
-  - bash upload.sh travis-out/*
+  - for filename in travis-out/*; do curl --upload-file $filename https://transfer.sh/$(basename $filename); done
 
 notifications:
   email: false
