Use prepared desktop file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,8 +33,6 @@ else()
     set(LiriText_OUTPUT_NAME "liri-text")
 endif()
 
-liri_translate_desktop(_desktop_file SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/../data/io.liri.Text.desktop.in")
-
 liri_add_executable(LiriText
     OUTPUT_NAME
         "${LiriText_OUTPUT_NAME}"
@@ -86,7 +84,7 @@ liri_add_executable(LiriText
     APPDATA
         "${CMAKE_CURRENT_SOURCE_DIR}/../data/io.liri.Text.appdata.xml"
     DESKTOP
-        "${_desktop_file}"
+        "${CMAKE_CURRENT_SOURCE_DIR}/../data/io.liri.Text.desktop"
     LIBRARIES
         Qt5::Core
         Qt5::Gui
