Update Transifex configuration
For the new translation tools.

--- a/.tx/config
+++ b/.tx/config
@@ -4,6 +4,7 @@ host = https://www.transifex.com
 [liri-text.app]
 type = QT
 source_lang = en
+liri_source_directory = src
 source_file = src/translations/liri-text.ts
 file_filter = src/translations/liri-text_<lang>.ts
 
@@ -11,4 +12,5 @@ file_filter = src/translations/liri-text_<lang>.ts
 type = DESKTOP
 source_lang = en
 source_file = data/io.liri.Text.desktop.in
+liri_dest_file = data/io.liri.Text.desktop
 file_filter = src/translations/io.liri.Text_<lang>.desktop
