--- a/.github/workflows/transifex.yml
+++ b/.github/workflows/transifex.yml
@@ -18,6 +18,7 @@ jobs:
         uses: liri-infra/lupdate-action@master
       - name: Push sources and pull translations
         uses: liri-infra/transifex-action@master
+        with:
             tx_token: ${{ secrets.TX_TOKEN }}
             committer_name: Liri CI
             committer_email: ci@liri.io
