--- a/.github/workflows/transifex.yml
+++ b/.github/workflows/transifex.yml
@@ -2,7 +2,7 @@ name: Translations Sync
 
 on:
   schedule:
-    - cron: '0 21 * * *'
+    - cron: '0 22 * * 0'
 
 jobs:
   update-translations:
@@ -10,19 +10,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ssh-key: ${{ secrets.CI_SSH_KEY }}
-          ssh-strict: false
-          persist-credentials: true
       - name: Run lupdate
         uses: liri-infra/lupdate-action@master
       - name: Push sources and pull translations
         uses: liri-infra/transifex-action@master
         with:
             tx_token: ${{ secrets.TX_TOKEN }}
+            ssh_key: ${{ secrets.CI_SSH_KEY }}
             committer_name: Liri CI
             committer_email: ci@liri.io
-            master_branch: develop
             translations_folder: translations
             pull_translations: true
             push_sources: true
