--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -197,7 +197,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: ${{ runner.os }}
-          path: github-out/
+          path: build/github-out/
 
   release:
     if: "!contains(github.event.head_commit.message, 'ci skip') && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')"
@@ -226,6 +226,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./github-out/LiriText.dmg
+          asset_path: build/github-out/LiriText.dmg
           asset_name: LiriText-${{ github.ref }}.dmg
           asset_content_type: application/octet-stream
