--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -33,3 +33,12 @@ jobs:
       - uses: liri-infra/xdg-validator-action@master
         with:
           strict: false
+  qml:
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+      - name: Validate QML and JavaScript files
+        uses: liri-infra/qmllint-action@master
