Add appdata to Transifex resources
We can now translate appdata files too.

--- a/.tx/config
+++ b/.tx/config
@@ -13,3 +13,9 @@ source_lang = en
 source_file = data/io.liri.Text.desktop.in
 liri_dest_file = data/io.liri.Text.desktop
 file_filter = translations/data/io.liri.Text_<lang>.desktop
+
+[liri-text.metainfo-file]
+type = PO
+source_lang = en
+source_file = translations/data/metainfo/metainfo.pot
+file_filter = translations/data/metainfo/<lang>.po
