--- a/data/io.liri.Text.desktop
+++ b/data/io.liri.Text.desktop
@@ -1,37 +1,4 @@
 [Desktop Entry]
-Categories=Qt;Utility;TextEditor;
-Comment=Edit text files
-Comment[ca]=Editar arxius de text
-Comment[da]=Rediger tekstfiler
-Comment[de]=Textdateien bearbeiten
-Comment[fr]=Editer des fichiers texte
-Comment[id]=Sunting berkas teks
-Comment[it]=Modifica file di testo
-Comment[lt]=Redaguoti tekstinius failus
-Comment[pl]=Edytuj pliki tekstowe
-Comment[pt_BR]=Edite arquivos de texto
-Comment[ru]=Редактируйте текстовые файлы
-Comment[tr]=Metin dosyalarını düzenle
-Comment[zh_CN]=编辑文本文件
-Comment[zh_TW]=編輯文字檔案
-Exec=liri-text %f
-GenericName=Text Editor
-GenericName[ca]=Editor de text
-GenericName[da]=Tekstredigering
-GenericName[de]=Textbearbeitungsprogramm
-GenericName[fr]=Éditeur de texte
-GenericName[id]=Penyunting teks
-GenericName[it]=Editor di testo
-GenericName[lt]=Tekstų redaktorius
-GenericName[pl]=Edytor Tekstu
-GenericName[pt_BR]=Editor de texto
-GenericName[ru]=Текстовый редактор
-GenericName[tr]=Metin Düzenleyici
-GenericName[zh_CN]=文本编辑器
-GenericName[zh_TW]=文字編輯器
-Icon=io.liri.Text
-Keywords=Text;Editor;
-MimeType=text/plain;
 Name=Liri Text
 Name[ca]=Text de Liri
 Name[da]=Liri Tekst
@@ -42,10 +9,43 @@ Name[it]=Liri Text
 Name[lt]=Liri tekstas
 Name[pl]=Liri Text
 Name[pt_BR]=Liri Text
-Name[ru]=Liri Текст
+Name[ru]=Liri Ð¢ÐµÐºÑÑ
 Name[tr]=Liri Metin
-Name[zh_CN]=Liri文本编辑器
-Name[zh_TW]=Liri 文字編輯器
-StartupWMClass=liri-text
+Name[zh_CN]=Liriææ¬ç¼è¾å¨
+Name[zh_TW]=Liri æå­ç·¨è¼¯å¨
+GenericName=Text Editor
+GenericName[ca]=Editor de text
+GenericName[da]=Tekstredigering
+GenericName[de]=Textbearbeitungsprogramm
+GenericName[fr]=Ãditeur de texte
+GenericName[id]=Penyunting teks
+GenericName[it]=Editor di testo
+GenericName[lt]=TekstÅ³ redaktorius
+GenericName[pl]=Edytor Tekstu
+GenericName[pt_BR]=Editor de texto
+GenericName[ru]=Ð¢ÐµÐºÑÑÐ¾Ð²ÑÐ¹ ÑÐµÐ´Ð°ÐºÑÐ¾Ñ
+GenericName[tr]=Metin DÃ¼zenleyici
+GenericName[zh_CN]=ææ¬ç¼è¾å¨
+GenericName[zh_TW]=æå­ç·¨è¼¯å¨
+Comment=Edit text files
+Comment[ca]=Editar arxius de text
+Comment[da]=Rediger tekstfiler
+Comment[de]=Textdateien bearbeiten
+Comment[fr]=Editer des fichiers texte
+Comment[id]=Sunting berkas teks
+Comment[it]=Modifica file di testo
+Comment[lt]=Redaguoti tekstinius failus
+Comment[pl]=Edytuj pliki tekstowe
+Comment[pt_BR]=Edite arquivos de texto
+Comment[ru]=Ð ÐµÐ´Ð°ÐºÑÐ¸ÑÑÐ¹ÑÐµ ÑÐµÐºÑÑÐ¾Ð²ÑÐµ ÑÐ°Ð¹Ð»Ñ
+Comment[tr]=Metin dosyalarÄ±nÄ± dÃ¼zenle
+Comment[zh_CN]=ç¼è¾ææ¬æä»¶
+Comment[zh_TW]=ç·¨è¼¯æå­æªæ¡
+Exec=liri-text %f
 Terminal=false
 Type=Application
+StartupWMClass=liri-text
+MimeType=text/plain;
+Categories=Qt;Utility;TextEditor;
+Keywords=Text;Editor;
+Icon=io.liri.Text
