--- a/data/io.liri.Text.desktop.in
+++ b/data/io.liri.Text.desktop.in
@@ -1,13 +1,12 @@
 [Desktop Entry]
-Name=Liri Text
-GenericName=Text Editor
-Comment=Edit text files
-#TRANSLATIONS
+_Name=Liri Text
+_GenericName=Text Editor
+_Comment=Edit text files
 Exec=liri-text %f
 Terminal=false
 Type=Application
 StartupWMClass=liri-text
 MimeType=text/plain;
-Categories=Qt;Utility;TextEditor;
-Keywords=Text;Editor;
+_Categories=Qt;Utility;TextEditor;
+_Keywords=Text;Editor;
 Icon=io.liri.Text
