--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,11 @@
-# C++ objects and libs
+# SPDX-FileCopyrightText: 2020 Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>
+#
+# SPDX-License-Identifier: CC0-1.0
 
-*.slo
-*.lo
-*.o
-*.a
-*.la
-*.lai
-*.so
-*.dll
-*.dylib
-
-# Qt-es
-
-/.qmake.cache
-/.qmake.stash
-*.pro.user
-*.pro.user.*
-*.qbs.user
-*.qbs.user.*
-*.moc
-moc_*.cpp
-qrc_*.cpp
-ui_*.h
-Makefile*
-*-build-*
-
-# QtCreator
-
+build/
+*.user
 *.autosave
-
-#QtCtreator Qml
-*.qmlproject.user
-*.qmlproject.user.*
+*.swp
 
 # Snapcraft
 .snapcraft/
